fix(KM-49): Remove body width fit content from global.css. In HomePage/Careers, change SimpleGrid gap lg to 90. In CareersPage/Openings, remove px from Flex component and on Card, add width 90% and alignSelf center. These will fix white space issue.

--- a/app/global.css
+++ b/app/global.css
@@ -11,10 +11,6 @@
   --primary-red: #db0a40;
 }
 
-body {
-  width: fit-content;
-}
-
 .swiper-button-prev {
   color: (var(--background-color-med));
   border-radius: 50%;
